--- a/style.css
+++ b/style.css
@@ -1,6 +1,102 @@
+@font-face {
+  font-family: "font1";
+  src: url(./fonts/Montserrat-Medium.ttf);
+}
+@font-face {
+  font-family: "font2";
+  src: url(./fonts/Montserrat-Thin.ttf);
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: "font1", sans-serif;
+}
 li {
   list-style: none;
 }
-.top{
+.top {
   background: url(./img/bg.jpg) center/cover fixed;
+}
+nav ul {
+  display: flex;
+  justify-content: space-around;
+  margin: 0px 10%;
+}
+nav a {
+  color: black;
+  text-decoration: none;
+  padding: 10px 2.15%;
+}
+nav a:hover {
+  color: #6920b2;
+}
+nav li {
+  text-transform: uppercase;
+  font-size: 0.75rem;
+}
+.a-last {
+  padding: 0;
+  margin: 0;
+}
+.last {
+  display: flex;
+  margin: 8px 0;
+  padding: 3px 3px;
+  background: #e0e0e0;
+  border-radius: 20px;
+  font-size: 0.75rem;
+}
+.last:hover {
+  color: #6920b2;
+  background: rgb(142, 141, 141) 0;
+  transition: 0.3s;
+}
+.last:hover .fr{
+  border-right: 2px solid white;
+  transition: 0.3s;
+}
+.fr {
+  padding: 0 10px;
+  margin: 0;
+  border-right: 2px solid black;
+}
+.en {
+  padding: 0 10px;
+}
+.top {
+  padding: 50px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.top img{
+  width: 40%;
+  margin: 0 auto;
+}
+.top h1{
+  color: white;
+  margin: 30px auto;
+  font-family: "font2",sans-serif;
+  font-size: 1.75rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.button-1{
+  margin: 0 auto;
+  background: rgba(0, 0, 0, 0);
+  color: white;
+  font-family: "font1",sans-serif;
+  font-size: 1.25rem;
+  padding:10px 15px;
+  border: 1px solid white;
+  text-decoration: none;
+}
+.fas .fa-chevron-right {
+  font-size: 0.9rem;
+  letter-spacing: 10px;
+}
+.button-1:hover {
+  background:rgba(255, 255, 255, 0.306);
 }
