--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ nav li {
   color: white;
   font-family: "font1",sans-serif;
   font-size: 1.25rem;
-  padding:10px 15px;
+  padding:10px 5%;
   border: 1px solid white;
   text-decoration: none;
 }
@@ -99,4 +99,46 @@ nav li {
 }
 .button-1:hover {
   background:rgba(255, 255, 255, 0.306);
+}
+.head-1{
+  height: 30px;
+  padding: 20px 15%; 
+  text-align: center;
+}
+.section1{
+  background: black;
+  color:white;
+  min-height: 400px;
+  padding: 0 20% 30px 20%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.under-section1{
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.under-section1 img{
+  padding: 25px 0;
+}
+.under-section1 h3{
+  text-align: center;
+  text-transform: uppercase;
+  padding: 25px 0 10px 0;
+  font-size: 1rem;
+}
+.under-section1 p{
+  padding: 0 0 25px 0;
+  font-size: 0.75rem;
+  font-family: "font2";
+  text-align: center;
+}
+.section2{
+  background: #f7f7f7;
+  display: flex;
+}
+footer{
+  background: #ffff;
 }
