--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav{
 nav ul {
   display: flex;
   justify-content: space-around;
-  margin: 0px 10%;
+  margin: 0px auto;
 }
 nav a {
   color: black;
@@ -108,21 +108,26 @@ nav li {
   background:rgba(255, 255, 255, 0.306);
 }
 .head-1{
-  margin: 20px 15%; 
+  margin: 20px auto; 
   text-align: center;
+  width: 80%;
 }
 
 .section1{
   background: black;
   color:white;
   min-height: 400px;
-  padding: 0 20% 30px 20%;
+}
+.s1-container{
+  margin: 0 auto;
+  width: 80%;
+  padding: 60px 0;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: space-between;
+  align-items: center;  
 }
 .under-section1 img{
-  max-width: 100%;
+  width: 100%;
 }
 .under-section1{
   width: 30%;
@@ -147,19 +152,20 @@ nav li {
   font-family: "font2";
   text-align: center;
 }
-.under-section1 .button-1 {
+.button-1 {
   padding:10px 30px;
 }
-.under-section1 .button-1 div {
+.button-1 div {
   padding: 0;
   font-size: 0.75rem;
 }
 .color3{
     background: #f7f7f7;
-    padding: 0 0 20px 0;
+    padding: 30px 0;
   }
 .section2{
-  padding: 50px 10%;
+  margin:0 auto;
+  width: 80%;
   display: flex;
   justify-content: space-between;
 }
@@ -187,7 +193,8 @@ nav li {
 .usection2{
   display: flex;
   justify-content: space-between;  
-  margin: 0px 10%;
+  margin: 0 auto;
+  width: 80%;
 }
 .unders2{
   max-width: 25%;
@@ -196,7 +203,7 @@ nav li {
 }
 .unders2 img{
   box-shadow: 4px -4px 5px rgba(0, 0, 0, 0.281);
-  max-width: 100% ;
+  width: 100% ;
 }
 .unders2 h4{
 padding: 10px 0;}
@@ -223,18 +230,21 @@ footer{
 
 }
 .top-footer {
-  margin: 40px 10%;
+  margin: 40px auto;
+  width: 80%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   padding: 30px 0;
   position: relative;
 }
 .top-footer::after{
   content: "";
   position: absolute;
-  width: 70%;
-  border-bottom: solid 2px lightgray;
+  width: 80%;
+  border-bottom: solid 1px lightgray;
   bottom: 0px;
+  left: 50%;
+  transform: translatex(-50%);
 }
 .flex{
   display:flex;
@@ -278,7 +288,8 @@ padding: 10px 0;
   font-size: 0.9rem;
 }
 .mid-footer{
-  margin: 10px 7% 40px 7%;
+  margin: 20px auto;
+  width: 80% ;
   justify-content: space-between;
   align-items:center;
 }
@@ -297,17 +308,18 @@ padding: 10px 0;
   width: 60%;
   display:flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 .rm-footer div img{
-  max-width: 100%;
+  width: 100%;
+  padding: 5px;
 }
 .end-footer{
   background: black;
-  padding: 0 10% ;
 }
 .end-footer h5{
   color:white;
-  text-align:center ;
+  text-align:center ; 
   padding: 30px 0;
   font-size: 1rem;
   text-transform: uppercase;
@@ -315,11 +327,16 @@ padding: 10px 0;
 }
 .end-footer div{
   justify-content: space-around;
-  padding: 0 0 40px 0 ;
+
 }
-.end-footer div img {
-  max-width: 10%;
-  height: 20px;
+.footer-container{
+  flex-wrap: wrap;
+}
+.fimg{
+  width: 9%;
+}
+.fimg img{
+  max-width: 100%;
 }
 @media (max-width : 1310px) {
   .under-section1 h3{
@@ -363,9 +380,10 @@ padding: 10px 0;
   .head-1 p{
     font-size: 0.85rem;
   }
-  .section1 {
+  .s1-container {
     font-size: 0.65rem;
     padding: 0 7.5% 30px 7.5%;
+    width: 90%;
   }
   .section2{
     padding: 50px 5%;
@@ -378,6 +396,7 @@ padding: 10px 0;
   } 
   .section2 a div{
     padding: 5px;
+    width: 105px;
   }
   .section2 a div .fas{
     font-size: 0.60rem;
@@ -395,10 +414,6 @@ padding: 10px 0;
   }
   .unders2 a div {
     font-size: 0.65rem;
-  }
-
-  .end-footer{
-    padding: 0 5%;
   }
   .utop-footer h5{
     font-size: 0.75rem;
@@ -418,7 +433,19 @@ padding: 10px 0;
   }
   .utop-footer div i{
     font-size: 0.65rem;
+  }
+  .lm-footer h5{
+    font-size: 0.85rem;
+  }
+  .lm-footer p{
+    font-size: 0.65rem;
   } 
+}
+@media (max-width : 700px) {
+  .button-1 {
+    padding: 5px  1%;
+    font-size: 0.75rem;
+}
 }
 @media (max-width : 600px) {
   nav {
@@ -430,7 +457,7 @@ padding: 10px 0;
     font-size: 1.25rem;
     text-align: center; 
   }
-  .section1{
+  .s1-container{
     flex-direction: column;
   }
   .under-section1{
